2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-02-25  Cedric BAIL

	* Fix build with DSO.

2011-03-19  Mike Blumenkrantz

        * Fix crash in e-notify-send when invalid DBUS_SESSION_BUS_ADDRESS is specified